--- a/text/acknowledgements.tex
+++ b/text/acknowledgements.tex
@@ -1,31 +1,18 @@
 \subsection*{Personal}
 
-This is where you thank your advisor, colleagues, and family and friends.
+% This is where you thank your advisor, colleagues, and family and friends.
+% Advisors: Pier Palamara, Simon Myers
+% Co-authors: Georgios, Leo, Fergus
+% Family: Ma, Pa, Bro
 
 
 \subsection*{Institutional}
 
-If you want to separate out your thanks for funding and institutional support, I don't think there's any rule against it.  Of course, you could also just remove the subsections and do one big traditional acknowledgement section.
+% Wellcome trust, clarendon
 
 \subsection*{Previously published material}
-I feel deeply grateful for having had the chance to work with talented and dedicated
-collaborators on several projects during the course of my DPhil. Some of the work
-presented in this thesis has been developed with the input of such collaborators,
-and has resulted in peer-reviewed publications and article pre-prints. As scientific
-ideas and output are often generated collaboratively, I use the pronouns ``I'' and
-``we'' inter-changeably in this thesis.
+I am deeply grateful for the opportunity to work with talented and dedicated collaborators on several projects throughout the course of my DPhil. Some of the work presented in this thesis was developed with input from these collaborators and has resulted in peer-reviewed publications and preprints. As scientific ideas and outputs are often generated collaboratively, I use the pronouns "we" throughout this thesis.
 
-Throughout the thesis, any data processing or quality control steps that have been
-performed by others, or for which I amended scripts originally produced by others,
-are acknowledged as such. The work presented in this thesis, including all the code
-and analyses to generate text, figures, and tables are a result of my original work,
-except as specified in the text.
+In the thesis, any data processing or quality control steps performed by others, or cases where I modified scripts originally created by others, are acknowledged accordingly. The work presented, including all code and analyses used to generate text, figures, and tables, is entirely my own, except where explicitly noted.
 
-Chapters 2, 3, and 5 are adapted from sections of: my first-authored pre-print
-The genetic architecture of changes in adiposity during adulthood1 and my firstauthored
-journal publication Obesity and risk of female reproductive conditions:
-A Mendelian Randomisation Study2. I have received written permission from
-editors of the respective journals to reproduce published figures in part or in full
-in my thesis. I have also received written confirmation from all co-authors of
-each publication and my supervisor, Professor Cecilia Lindgren, to reuse parts
-of previously published text in my thesis.
+Chapters 4 and 5 are adapted from sections of my first-authored preprint, "A scalable variational inference approach for increased mixed-model association power" which is currently under review at Nature Genetics. I have obtained written permission from the editors of the respective journals to reproduce published figures, in part or in full, within my thesis.
